# Tarragon-Health

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  README.md  TARRAGON_HEALTH_V1_SPEC.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: launch.json
docs/: ARCHITECTURE.md  BRAND_GUIDE.md  CLINICAL_TRUST_MODEL_SPEC.md  FEATURE_SPEC.md  FULL_SPECIFICATION_V4.md  HEALTH_EDUCATION_PATHWAY_SPEC.md  INTEGRATIONS_API.md  LIFESTYLE_ENGINE_BUILD_PLAN.md  MARKETING_SITE_SPEC.md  OBESITY_LIFESTYLE_PATHWAY_SPEC.md  OMADA_FEATURE_PROPOSALS.md  Tarragon_Health_Master_Operating_Plan_v4.md  Tarragon_Health_Pricing_Guide.docx  Tarragon_Health_Pricing_Guide_v2.docx  (+1 more)
services/ml/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
services/ml/app/: __init__.py  config.py  main.py  rate_limit.py  security.py
services/ml/app/routers/: analytics.py  batch.py  diabetes.py  health.py  hypertension.py  labs.py  lifestyle.py  risk.py
services/ml/app/schemas/: __init__.py  analytics.py  batch.py  diabetes.py  hypertension.py  labs.py  lifestyle.py  risk.py
services/ml/app/scoring/: __init__.py  bp_control.py  cohort_analytics.py  hba1c.py  lab_reference.py  lifestyle.py  score2.py  screening_interpretation.py
services/ml/tests/: conftest.py  test_bp_control.py  test_cohort_analytics.py  test_hba1c.py  test_health.py  test_lab_reference.py  test_lifestyle.py  test_rate_limit.py  test_routers.py  test_routers_week8.py  test_score2.py  test_screening_interpretation.py  test_security.py
supabase/: config.toml
(+1056 files in other folders)
